test: refactor CRD generator tests to use final var for local variables
Signed-off-by: David Sondermann <david.sondermann@hivemq.com>